--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,13 @@
 buildscript {
 	ext {
 		springBootVersion = '1.5.9.RELEASE'
+		
 	}
+	
+	// 自定义 Thymeleaf 和 Thymel Layout Dialect 的版本
+	ext['thymeleaf.version'] = '3.0.3.RELEASE'
+	ext['thymeleaf-layout-dialect.version'] = '2.2.0'
+		
 	repositories {
 		maven{
     		url 'http://maven.aliyun.com/nexus/content/groups/public/'
